# geo_monitoring

./: docker-compose.yml  save.ts
backend/: Dockerfile  README.md  docker-compose.yml  generate_data.py  init.sql  pyproject.toml  requirements.txt  training_data.csv
backend/app/: ai_model.py  api.py  crud.py  db.py  fuzzy_logic.py  main.py  model.pkl  models.py  schemas.py  services.py
backend/app/api/: routes.py  sensor_simulation.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/air-monitoring/: package-lock.json  package.json
frontend/air-monitoring/src/: App.tsx
frontend/air-monitoring/src/components/: Layout.tsx  RegionsChart.tsx  SensorChart.tsx  SensorTable.tsx
frontend/air-monitoring/src/pages/: Dashboard.tsx
frontend/air-monitoring/src/services/: api.ts
frontend/src/: App.tsx
frontend/src/components/: Charts.tsx  Dashboard.tsx  EmissionStats.tsx  Layout.tsx  ModelPrediction.tsx
