[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Victor Polyakov <polyakov.victor21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
psycopg2 = "^2.9.10"
pydantic = "^2.10.2"
sqlalchemy = "^2.0.36"
scikit-fuzzy = "^0.5.0"
numpy = "^2.2.0"
scipy = "^1.14.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
